--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,6 +8,7 @@ security:
             security: false
         main:
             anonymous: true
+            http_basic: ~
 
             # activate different ways to authenticate
 
