--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,15 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+home_route:
+  path: /
+  controller: App\Controller\HomeController::index
+
+login_route:
+  path: /login
+  controller: App\Controller\SecurityController::login
+
+logout_route:
+  path: /logout
+  controller: App\Controller\SecurityController::logout
