Mise en place login

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,26 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\Utilisateur:
+            algorithm: bcrypt
+
     providers:
         in_memory: { memory: ~ }
+        in_database:
+            entity:
+                class: App\Entity\Utilisateur
+                property: password
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+            provider: in_database
+
+            form_login:
+                login_path: login_route
+                check_path: login_route
 
             # activate different ways to authenticate
 
