Mise en place auth 2

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,13 +3,14 @@ security:
     encoders:
         App\Entity\Utilisateur:
             algorithm: bcrypt
+            cost: 12
 
     providers:
         in_memory: { memory: ~ }
         in_database:
             entity:
                 class: App\Entity\Utilisateur
-                property: password
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -21,7 +22,10 @@ security:
             form_login:
                 login_path: login_route
                 check_path: login_route
-
+                csrf_token_generator: security.csrf.token_manager
+                default_target_path: home_route
+                failure_path: login_route
+                provider: in_database
             # activate different ways to authenticate
 
             # http_basic: true
