--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,6 +29,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Controller\bo\:
-        resource: '../src/Controller/bo'
+    App\Controller\admin\:
+        resource: '../src/Controller/admin'
         tags: ['controller.service_arguments']
