--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,11 @@ services:
         public: false       # Allows optimizing the container by removing unused services; this also means
                             # fetching services directly from the container via $container->get() won't work.
                             # The best practice is to be explicit about your dependencies anyway.
+        bind:
+            # this injects the second mailer when type-hinting constructor arguments with \Swift_Mailer
+            \Swift_Mailer: '@swiftmailer.mailer.second_mailer'
+            # this injects the second mailer when a service constructor argument is called $specialMailer
+            $specialMailer: '@swiftmailer.mailer.second_mailer'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
