--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,6 +24,5 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 default_target_path: home_route
                 failure_path: login_route
-                provider: in_database
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/toto, roles: ROLE_ADMIN }
