--- a/.env
+++ b/.env
@@ -20,5 +20,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/atypik
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://stefanedr.dev@gmail.com:Qkku5668@localhost:25
+MAILER_URL=smtp://localhost:25?encryption=ssl&auth_mode=login&username=&password=
 ###< symfony/swiftmailer-bundle ###
