--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,7 +9,7 @@ security:
         in_database:
             entity:
                 class: App\Entity\Utilisateur
-                property: email
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
