ajout page contact

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -5,3 +5,7 @@
 home_route:
   path: /
   controller: App\Controller\HomeController::index
+
+contact_route:
+  path: /contact
+  controller: App\Controller\ContactController::index
