customization des pages errors access

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,5 +26,7 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 default_target_path: home_route
                 failure_path: login_route
+                
+            access_denied_handler: App\Security\AccessDeniedHandler
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
