--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,8 @@
 parameters:
     locale: 'fr'
 
+    uploads_directory: '%kernel.project_dir%/public/uploads/logements'
+
 services:
     # default configuration for services in *this* file
     _defaults:
