--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,3 +30,6 @@ security:
             access_denied_handler: App\Security\AccessDeniedHandler
     access_control:
         - { path: ^/admin, roles: ROLE_ADMIN }
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
