--- a/.env
+++ b/.env
@@ -20,5 +20,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/atypik
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://localhost:25
+MAILER_URL=gmail://stefane.rodrigues.aef@gmail.com:BhEMaeSG@localhost?encryption=tls&auth_mode=oauth
 ###< symfony/swiftmailer-bundle ###
