--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.2",
+        "stripe/stripe-php": "^6.28",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "*",
         "symfony/config": "*",
