--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -1,9 +1,8 @@
 monolog:
     handlers:
         main:
-            type: fingers_crossed
-            action_level: error
-            handler: nested
+            type: rotating_file
+            path:  "%kernel.logs_dir%/%kernel.environment%.log"
             excluded_404s:
                 # regex: exclude all 404 errors from the logs
                 - ^/
