--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -24,7 +24,7 @@ security:
                 login_path: login_route
                 check_path: login_route
                 csrf_token_generator: security.csrf.token_manager
-                default_target_path: home_route
+                #default_target_path: home_route
                 failure_path: login_route
                 
             access_denied_handler: App\Security\AccessDeniedHandler
