--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,8 @@ parameters:
 
     uploads_directory: '%kernel.project_dir%/public/uploads/logements'
 
+    api_token: 'eTpU6yFAERv9g5q7Pi3t498'
+
 services:
     # default configuration for services in *this* file
     _defaults:
