--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,4 +32,5 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
 
     role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
+        ROLE_ADMIN:       ROLE_PROPRIO
+        ROLE_PROPRIO:       ROLE_USER
